--- a/ITUEtkinlikProject6.0/ITUEtkinlikProject6.0.csproj
+++ b/ITUEtkinlikProject6.0/ITUEtkinlikProject6.0.csproj
@@ -379,6 +379,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\Member\Data\" />
+    <Folder Include="Services\" />
     <Folder Include="wwwroot\userimages\" />
     <Folder Include="wwwroot\soft-ui-dashboard\.git\objects\info\" />
     <Folder Include="wwwroot\soft-ui-dashboard\.git\objects\pack\" />
